# spdloglib

./: CMakeLists.txt  main.cpp
log/: CMakeLists.txt  CMakeLists.txt.bak  log.cpp  log.h
mathlib/: CMakeLists.txt  mathlib.cpp  mathlib.h
